[package]
name = "job_system"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "jobsystem"
crate-type = ["cdylib"]
