[package]
name = "job_system"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
dashmap = "5.5.3"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
petgraph = "0.6.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openai_api_rust = "0.1.8"

# [lib]
# name = "jobsystem"
# crate-type = ["cdylib"]
